--- a/src/assets/sass/components/_ticketSelector.scss
+++ b/src/assets/sass/components/_ticketSelector.scss
@@ -25,12 +25,3 @@
   justify-content: space-between;
   align-items: center;
 }
-
-.field-container {
-  border: 2px solid black;
-  color: black;
-  padding: 10px;
-  margin-bottom: 15px;
-  border-radius: 10px;
-  background-color: #ffbfed;
-}
